# calango

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ROADMAP.md
cppaudio/: audio.hh
cppinput/: keyboard.hh
include/cppinput/backend/: ikeyboard.hh  linux_keyboard.hh
include/cppinput/internal/: ikeyboard.hh  linux_keyboard.hh
include/cppinput/keyboard/: kb_keys.hh  keyboard.hh  options.hh
include/input/: keyboard.hpp  mouse.hpp  pch.hpp
include/input/internal/: base.hpp  namespaces.hpp  pch.hpp
include/input/internal/keyboard/: ikeyboard.hpp  kbkeys.hpp  lin_kbkeys.hpp  linux_keyboard.hpp  utils.hpp  win_kbkeys.hpp  windows_keyboard.hpp
include/input/internal/keyboard/back/: linux_keyboard.hpp  windows_kbkeys.hpp  windows_keyboard.hpp
include/input/internal/keyboard/linux/: linux_keyboard.hpp
include/input/internal/keyboard/windows/: windows_kbkeys.hpp  (+1 more)
include/input/internal/mouse/: imouse.hpp  linux_mouse.hpp  linux_mskeys.hpp  mskeys.hpp
include/input/keyboard/: get_backend.hh  getbackend.hpp  getkeyboard.hh  ikeyboard.hh  ikeyboard.hpp  kbkeys.hpp  keyboard.hh  keyboard.hpp  start.hh
include/input/keyboard/backend/: linux_keyboard.hh  linux_keyboard.hpp
include/input/keyboard/internal/: ikeyboard.hpp  linux_keyboard.hpp  windows_keyboard.hpp
include/input/mouse/: getbackend.hpp  imouse.hpp  mouse.hpp
include/input/mouse/backend/: linux_mouse.hpp
include/input/mouse/internal/: linux_mouse.hpp
man/: keyboard.md
test/: keyboard.cpp  main.cpp  mouse.cpp
test/keyboard/: keyboard.cpp  sdl.cpp  specialkeys.cpp
test/mouse/: mouse.cpp
(+4 files in other folders)
